Assets/style.css
  
h1 {
  font-family: "Oleo Script Swash Caps", cursive;
  text-align: center;
  width: 100%;
  color: black;
}
.navbar {
  width: 100%;
  background-color: rgb(228, 222, 219);
}

h1, h2, h4, a, .nav-link {
  color: black;
  clear: both;
  font-family: "Oleo Script Swash Caps", cursive;
}
.keen {
  font-family: 'Oleo Script Swash Caps', cursive;
}
.nav-link {
  font-size: 55px;
  font-family: 'Oleo Script Swash Caps', cursive;
}
h3 {
  font-family: "Oleo Script Swash Caps", cursive;
  color: black;
}
li, p {
  font-family: "Oleo Script Swash Caps", cursive;
  color: black;
  font-size: 20px;
}
/*resume download or click able*/
.resume {
  float: right;
  margin-top: -40px;
}
.element-style {
  margin-top: px;
}

/*body background*/
.big {
  /* opacity: 1; */
  background-image: url(http://thumbpress.com/wp-content/uploads/2013/05/Perfect-Timed-Photos-8.jpg);
  /* position: relative;
  min-height: 100%;
  height: 100%; */
  background-size: 100% 100%;
  /* background-position: center; */
  background-repeat: no-repeat;
  background-size: cover;
}

/*text about*/
.text-about {
  float: right;
  top: 50px;
}

/*about img*/
.about-img {
  margin-inline-start: 300px;
  float: left;
}

/*contact form*/
.form-group {
  width: 80%;
  align-items: center;
  margin-inline-start: 50px;
  margin-inline-end: 100px;
}
/*contact form*/
.img-fluid {
  border-radius: 50%;
  width: 500px;
  height: 40px;
  position: relative;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
/*contact submit btn*/
#submit {
  width: 20%;
  border: solid darkblue transparent;
}
/*card*/
.card {
  margin-top: 20px;
  margin-bottom: 20px;
  margin-right: 10px;
  margin-left: 10px;
}

/*icons*/
.nav {
  align-items: center;
  margin-inline-end: 10px;
  float: right;
}
/*text about myself*/
.text-about {
  width: px;
}
/*footer*/
#footer {
  position: fixed;
  padding-bottom: 10px;
  /*background-color: rgb(228, 222, 219);*/
  text-align: center;
  /*border: 1px solid white;*/
  width: 100%;
  justify-content: center;
  left: 0;
  bottom: 0;

}
.card-text {
  font-size: 35px;
}
/*small screen 600px*/
@media only screen and (max-width: 600px) {
  .card,
  .card-text,
  h5,
  a {
    font-size: 10px;
  }
  .card-title {
    font-size: 11px;
  }
  p,
  li {
    font-size: 20px;
  }
  .form-group {
    margin-inline-start: 80px;
    align-items: center;
    margin-inline-start: 50px;
  }
  #submit {
    width: auto;
  }
  .text-about,
  h3,
  li {
    font-size: 10px;
  }

  .about-img {
    margin-inline-start: 0px;
  }
  .card .w-50 {
    margin-top: -10px;
  }
  .nav-link {
    font-size: 25px;
  }
}
/* x small 320px*/
@media only screen and (max-width: 320px) {
  .about-img {
    margin-inline-start: 0px;
  }
  .form-group {
    margin-inline-start: 60px;
    align-items: center;
  }
  .icon,
  img {
    align-items: center;
    width: 0px;
    font-size: 2px;
  }
  .card,
  .w-50,
  .detail-text {
    background-color: #eee;
    width: 200px;
    height: 100px;
    border: 1px dotted black;
    overflow: scroll;
  }
}
@media only screen and (max-width: 375px) {
  .form-group {
    margin-inline-start: 30px;
    align-items: center;
    float: left;
  }
  
}
/* 1024 pm max or more */
@media only screen and (min-width: 1024px) {
  .form-group {
    margin-inline-start: 100px;
    margin-inline-end: 10px;
  }
  }

